--- a/HarkerRanker/HarkerRanker/HarkerRanker.vcxproj
+++ b/HarkerRanker/HarkerRanker/HarkerRanker.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="minmax_sum.cpp" />
+    <ClCompile Include="ss_test1.cpp" />
+    <ClCompile Include="ss_test2.cpp" />
+    <ClCompile Include="string.cpp" />
+    <ClCompile Include="StringStream.cpp" />
     <ClCompile Include="Variable Sized Arrays.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
