--- a/HarkerRanker/HarkerRanker/HarkerRanker.vcxproj.filters
+++ b/HarkerRanker/HarkerRanker/HarkerRanker.vcxproj.filters
@@ -43,5 +43,17 @@
     <ClCompile Include="class and object.cpp">
       <Filter>C++</Filter>
     </ClCompile>
+    <ClCompile Include="box it.cpp">
+      <Filter>C++</Filter>
+    </ClCompile>
+    <ClCompile Include="InheritedCode.cpp">
+      <Filter>C++</Filter>
+    </ClCompile>
+    <ClCompile Include="odd even.cpp">
+      <Filter>C++</Filter>
+    </ClCompile>
+    <ClCompile Include="sherlockAndAnagrams.cpp">
+      <Filter>C++</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
